--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "bryanjoyarubio@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "ramsey/uuid": "^4.7"
+    }
 }
