--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "ramsey/uuid": "^4.7",
-        "monolog/monolog": "^3.8"
+        "monolog/monolog": "^3.8",
+        "intervention/image": "^2.7"
     }
 }
